--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanistSystemuicontroller = "0.27.0"
-agp = "8.5.2"
+agp = "8.9.2"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
@@ -23,6 +23,8 @@ foundationLayoutAndroid = "1.7.7"
 foundationAndroid = "1.7.7"
 uiToolingPreviewAndroid = "1.7.8"
 material3AndroidVersion = "1.3.1"
+dateTimeVersion = "0.5.0"
+protoliteWellKnownTypes = "18.0.1"
 
 [libraries]
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanistSystemuicontroller" }
@@ -46,6 +48,7 @@ androidx-foundation-layout-android = { group = "androidx.compose.foundation", na
 androidx-foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "foundationAndroid" }
 androidx-ui-tooling-preview-android = { group = "androidx.compose.ui", name = "ui-tooling-preview-android", version.ref = "uiToolingPreviewAndroid" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3AndroidVersion" }
+dateTime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "dateTimeVersion" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
