migration from Fleet to Android studio KMP for iosApp builds

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,32 @@ google-services.json
 # Android Profiling
 *.hprof
 .kotlin/
+
+# Xcode
+## User settings
+**/xcuserdata/
+
+## Obj-C/Swift specific
+*.hmap
+
+## App packaging
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+## Playgrounds
+timeline.xctimeline
+playground.xcworkspace
+
+# Swift Package Manager
+.build/
+
+# CocoaPods
+Pods/
+
+# Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
+# hence it is not needed unless you have added a package configuration file to your project
+# .swiftpm
+
+# macOS
+.DS_Store
